向下兼容JDK 8和Spring Boot 2.x版本，重新整理数据模型，支持MongoDB集群